fix: del folder

--- a/index.html
+++ b/index.html
@@ -1,1 +1,129 @@
-My CV
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+   <meta charset="UTF-8">
+   <meta http-equiv="X-UA-Compatible" content="IE=edge">
+   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+   <meta name="keywords" content="Tatyana, cv, resume">
+   <meta name="description" content="Tatyana Chernobuk resume site">
+   <title>Tatyana Chernobuk CV</title>
+</head>
+
+<body>
+   <img src="ava-2022.jpg" alt="Tatyana Chernobuk" width="200">
+   <h1>Tatyana Chernobuk</h1>
+   <h3>JS Frontend developer</h3>
+   <h3>Saratov, Russia</h3>
+   <h3>Contact me:</h3>
+   <p>Mobile: +7 917 317 3514
+      <br>
+      Email: tvchernobuk@gmail.com
+      <br>
+      <a href="https://www.linkedin.com/in/tatyanachernobuk" target="_blank">LinkedIn</a>
+      |
+      <a href="https://t.me/TatyanaChernobuk" target="_blank">Telegram</a>
+      |
+      <a href="https://www.behance.net/tvchernobuk" target="_blank">Behance</a>
+   </p>
+
+   <p>
+      <b>Hi, team!</b>
+      <br>
+      My name is Tatyana. I am a designer with over 10 years of experience in print and advertising design,
+      <br>
+      as well as in the design of digital products.
+   </p>
+   <p>2006 - 2011 - graphic designer;
+      <br>
+      2012 - 2017 - product designer;
+      <br>
+      2018 - present - web-designer, ux/ui designer.
+   </p>
+
+   <p>I am constantly learning new things and improving my professional skills.
+      <br>
+      At the moment I want to change my profession and become a front-end developer.
+   </p>
+   <h2>Work experience</h2>
+   <h3><a href="https://www.seo-russia.com/" target="_blank">Aurora, Russian SEO Company</a></h3>
+   <h4>UX/UI Engineer</h4>
+   <h4><em>March 2019 - present. Saratov, Russia</em></h4>
+   <ul>
+      <li>full cycle of project design development;</li>
+      <li>market and product research — JTBD, CJM, timeline, corridor of restrictions;</li>
+      <li>conducting qualitative research of target audience (an example can be found here);</li>
+      <li>development of design solutions for websites and mobile applications;</li>
+      <li>creation of a product design system;</li>
+      <li>UX / UI audit;</li>
+      <li>design of promotional materials for printing products and outdoor advertising;</li>
+      <li>development of logos and brand books, creation of corporate identity elements;</li>
+      <li>creation of animations;</li>
+      <li>communication with the team in the general chat and control of tasks in Bitrix.</li>
+   </ul>
+
+   <h3><a href="https://october-studio.ru/" target="_blank">October studio</a></h3>
+   <h4>Web designer</h4>
+   <h4><em>September 2018 - March 2019. Saratov, Russia</em></h4>
+   <ul>
+      <li>Website design, interface design;</li>
+      <li>Development of brand identity, drawing of typical pages, teasers and icons;</li>
+      <li>Creation of visual content (including animations) for social networks
+         and targeted advertising;</li>
+      <li>Communication with the team in the general chat and control of tasks in Trello.</li>
+   </ul>
+
+   <h3><a href="https://umbrella-agency.com/" target="_blank">Umbrella Agency</a></h3>
+   <h4>Web designer, product designer</h4>
+   <h4><em>April 2018 - September 2018. Moscow, Russia</em></h4>
+   <ul>
+      <li>website design creation;</li>
+      <li>development of brand identity, rendering of teasers and icons;</li>
+      <li>development of visual content for communities in VK, Instagram, YouTube
+         <br>
+         and targeted advertisements for Hier, Tissot, UFS, Play Doh, Svitlogorye;
+      </li>
+      <li>Design of advertising materials, static and animated banners;</li>
+      <li>Working with companies Hier, Tissot, UFS, Play Doh, Svitlogorye, etc.</li>
+      <li>development of design layouts for various printing products;</li>
+      <li>development of layouts for outdoor advertising;</li>
+      <li>preparation of layouts for printing</li>
+   </ul>
+
+   <h3><a href="https://mnogomebeli.com/" target="_blank">Много Мебели</a></h3>
+   <h4>Product designer</h4>
+   <h4><em>August 2012 - November 2017. Saratov, Russia</em></h4>
+   <ul>
+      <li>Development of corporate identity elements, expansion and support of the design system;</li>
+      <li>Design, layout, production of layouts, prepress;</li>
+      <li>Manufacturing quality control printing products: posters, booklets, leaflets, magnets, diplomas, certificates,
+         etc.</li>
+   </ul>
+
+   <h3>Languages</h3>
+   <p>
+      Russian (Native)
+      <br>
+      English (Intermediate, b1)
+   </p>
+
+   <h3>Skills</h3>
+
+   <ul>
+      <li>UI/UX</li>
+      <li>Prototyping</li>
+      <li>Graphic design</li>
+   </ul>
+
+   <h3>Tools</h3>
+
+   <ul>
+      <li>Figma</li>
+      <li>Adobe Photoshop</li>
+      <li>Adobe Illustrator</li>
+      <li>After Effects</li>
+      <li>Learning HTML, CSS</li>
+   </ul>
+</body>
+
+</html>
